--- a/DentalHospitalDatabase/MainWindow.xaml
+++ b/DentalHospitalDatabase/MainWindow.xaml
@@ -6,15 +6,15 @@
         xmlns:local="clr-namespace:DentalHospitalDatabase"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    
+
     <Grid Background="#FFBEEAFF">
-        <Button x:Name="btnDentalCheck" Background="Transparent" Margin="81,102,412.6,54"  FontSize="20" FontWeight="Bold" BorderBrush="Transparent" Click="btnDentalCheck_Click" >
+        <Button x:Name="btnDentalCheck" Background="Transparent" Margin="-27,101,521,55"  FontSize="20" FontWeight="Bold" BorderBrush="Transparent" Click="btnDentalCheck_Click" >
             <StackPanel Orientation="Vertical" Width="277" Height="261">
                 <Image Source="/DentalHospitalDatabase;component/images/Dental.png" Height="219" Margin="0,0,-0.2,0"/>
                 <TextBlock TextWrapping="Wrap" Text="Dental Check-in" RenderTransformOrigin="0.255,0.051" Margin="63,0,50.8,0" Height="32" Width="163" VerticalAlignment="Center"/>
             </StackPanel>
         </Button>
-        <Button x:Name="btnMedicalCheck" HorizontalAlignment="Left" Margin="420,91,0,0" VerticalAlignment="Top" Width="306" Height="264" BorderBrush="Transparent" FontSize="20" FontWeight="Bold" Click="btnMedicalCheck_Click" Background="Transparent">
+        <Button x:Name="btnMedicalCheck" HorizontalAlignment="Left" Margin="235,87,0,0" VerticalAlignment="Top" Width="306" Height="264" BorderBrush="Transparent" FontSize="20" FontWeight="Bold" Click="btnMedicalCheck_Click" Background="Transparent">
             <StackPanel Orientation="Vertical" Width="316" Height="269">
                 <Image Source="/DentalHospitalDatabase;component/images/Medical.png" Height="230" />
                 <TextBlock TextWrapping="Wrap" Text="Medical Check-in" VerticalAlignment="Top" HorizontalAlignment="Center"/>
@@ -23,8 +23,33 @@
 
 
         <Label x:Name="lblWelcome" Content="Welcome To The Hospital of Health" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="30" FontWeight="Bold"/>
+        <TextBox HorizontalAlignment="Left" Height="31" Margin="531,318,0,0" TextWrapping="Wrap" Text="New Patient" VerticalAlignment="Top" Width="226" Background="Transparent" BorderBrush="Transparent" FontSize="20" Focusable="False" FontWeight="Bold" HorizontalContentAlignment="Center"/>
+        <Ellipse Fill="#FF299B3E" HorizontalAlignment="Left" Height="142" Margin="602,171,0,0" VerticalAlignment="Top" Width="78"/>
+        <Ellipse Fill="#FF299B3E" HorizontalAlignment="Left" Height="85" Margin="602,101,0,0" VerticalAlignment="Top" Width="78"/>
+        <Ellipse Fill="#FF299B3E" HorizontalAlignment="Left" Height="108" Margin="576,191,0,0" VerticalAlignment="Top" Width="26" RenderTransformOrigin="0.5,0.5">
+            <Ellipse.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="24.092"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Ellipse.RenderTransform>
+        </Ellipse>
+        <Ellipse Fill="#FF299B3E" HorizontalAlignment="Left" Height="108" Margin="679,192,0,0" VerticalAlignment="Top" Width="26" RenderTransformOrigin="0.5,0.5">
+            <Ellipse.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-25.21"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Ellipse.RenderTransform>
+        </Ellipse>
+        <Button x:Name="btnNewPatient" HorizontalAlignment="Left" Margin="531,93,0,0" VerticalAlignment="Top" Width="231" Height="256" BorderBrush="Transparent" Background="Transparent" Click="btnNewPatient_Click"/>
+
     </Grid>
-    
+
     <Window.Resources>
         <Style TargetType="{x:Type Button}">
 
