--- a/DentalHospitalDatabase/New Patient.xaml
+++ b/DentalHospitalDatabase/New Patient.xaml
@@ -7,23 +7,47 @@
         mc:Ignorable="d"
         Title="Hospital of Health - New_Patient" Height="450" Width="800" MouseDown="WinNewPatient_MouseDown">
     <Grid Name="grid3" Background="#FFBEEAFF" Focusable="True">
-        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="10,359,0,0" VerticalAlignment="Top" Background="Transparent" Width="158" Height="43" FontWeight="Bold" FontSize="20" Click="btnReturn_Click" BorderBrush="#FF2363D0" BorderThickness="1"/>
+        <Button x:Name="btnReturn" Content="Return" HorizontalAlignment="Left" Margin="10,366,0,0" VerticalAlignment="Top" Background="Transparent" Width="158" Height="43" FontWeight="Bold" FontSize="20" Click="btnReturn_Click" BorderBrush="#FF2363D0" BorderThickness="1"/>
         <Label x:Name="lblNewPatient" Content="New Patient" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" Height="52" Width="204" FontSize="30" FontWeight="Bold" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"/>
-        <Button Content="New Appointment" HorizontalAlignment="Left" Margin="314,350,0,0" VerticalAlignment="Top" Width="195" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold" BorderBrush="#FF2363D0" BorderThickness="1" Background="Transparent"/>
-        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="30" Margin="120,80,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
-        <TextBox x:Name= "txtLAstName" HorizontalAlignment="Left" Height="30" Margin="120,115,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
-        <TextBox x:Name="txtDOB" HorizontalAlignment="Left" Height="30" Margin="120,185,0,0" TextWrapping="Wrap" Text="Date of Birth" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
-        <TextBox x:Name="txtGender" HorizontalAlignment="Left" Height="30" Margin="120,220,0,0" TextWrapping="Wrap" Text="Gender" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
-        <TextBox x:Name="txtSSN" HorizontalAlignment="Left" Height="30" Margin="120,255,0,0" TextWrapping="Wrap" Text="Social Security" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
-        <TextBox x:Name="txtAddress" HorizontalAlignment="Left" Height="30" Margin="120,290,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
-        <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="120,150,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
-        <TextBox x:Name="txtFNInput" HorizontalAlignment="Left" Height="30" Margin="255,80,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtLNInput" HorizontalAlignment="Left" Height="30" Margin="255,115,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtMIInput" HorizontalAlignment="Left" Height="30" Margin="255,150,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtDOBInput" HorizontalAlignment="Left" Height="30" Margin="255,185,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtGenderInput" HorizontalAlignment="Left" Height="30" Margin="255,220,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtSSNInput" HorizontalAlignment="Left" Height="30" Margin="255,255,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
-        <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="255,290,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <Button Content="New Appointment" HorizontalAlignment="Left" Margin="294,362,0,0" VerticalAlignment="Top" Width="204" Click="Button_Click" Height="50" FontSize="20" FontWeight="Bold" BorderBrush="#FF2363D0" BorderThickness="1" Background="Transparent"/>
+        <TextBox x:Name="txtFirstName" HorizontalAlignment="Left" Height="30" Margin="141,70,0,0" TextWrapping="Wrap" Text="First Name" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name= "txtLAstName" HorizontalAlignment="Left" Height="30" Margin="141,105,0,0" TextWrapping="Wrap" Text="Last Name" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtDOB" HorizontalAlignment="Left" Height="30" Margin="141,175,0,0" TextWrapping="Wrap" Text="Date of Birth" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtGender" HorizontalAlignment="Left" Height="30" Margin="141,210,0,0" TextWrapping="Wrap" Text="Gender" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtSSN" HorizontalAlignment="Left" Height="30" Margin="141,245,0,0" TextWrapping="Wrap" Text="Social Security" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtAddress" HorizontalAlignment="Left" Height="30" Margin="141,280,0,0" TextWrapping="Wrap" Text="Address" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtMiddleInitial" HorizontalAlignment="Left" Height="30" Margin="141,140,0,0" TextWrapping="Wrap" Text="Middle Initial" VerticalAlignment="Top" Width="135" FontFamily="Segoe UI Black" VerticalContentAlignment="Center" HorizontalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <TextBox x:Name="txtFNInput" HorizontalAlignment="Left" Height="30" Margin="276,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtLNInput" HorizontalAlignment="Left" Height="30" Margin="276,105,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtMIInput" HorizontalAlignment="Left" Height="30" Margin="276,140,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtDOBInput" HorizontalAlignment="Left" Height="30" Margin="276,175,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtGenderInput" HorizontalAlignment="Left" Height="30" Margin="276,210,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtSSNInput" HorizontalAlignment="Left" Height="30" Margin="276,245,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtAddressInput" HorizontalAlignment="Left" Height="30" Margin="276,280,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="360"/>
+        <TextBox x:Name="txtDocName" HorizontalAlignment="Left" Height="30" Margin="149,315,0,0" TextWrapping="Wrap" Text="Doctor Name" VerticalAlignment="Top" Width="127" FontFamily="Segoe UI Black" HorizontalContentAlignment="Center" VerticalContentAlignment="Center" Background="Transparent" BorderBrush="Transparent" IsReadOnly="True" TextAlignment="Right"/>
+        <ComboBox x:Name="cmbDocName" HorizontalAlignment="Left" Margin="276,315,0,0" VerticalAlignment="Top" Width="360" Height="30" IsReadOnly="True">
+            <ComboBoxItem Content="Randall Figueroa"/>
+            <ComboBoxItem Content="Jimmy Miller"/>
+            <ComboBoxItem Content="Teri Cooper"/>
+            <ComboBoxItem Content="Jim Silva"/>
+            <ComboBoxItem Content="Orville Ramirez"/>
+            <ComboBoxItem Content="Shawna Medina"/>
+            <ComboBoxItem Content="Regina Craig"/>
+            <ComboBoxItem Content="Tabitha Castillo"/>
+            <ComboBoxItem Content="Virgil Rogers"/>
+            <ComboBoxItem Content="Jose Dunn"/>
+            <ComboBoxItem Content="Ronnie Little"/>
+            <ComboBoxItem Content="Sheri Gill"/>
+            <ComboBoxItem Content="Erika Lyons"/>
+            <ComboBoxItem Content="Beth Copeland"/>
+            <ComboBoxItem Content="Claire Santiago"/>
+            <ComboBoxItem Content="James Bee"/>
+            <ComboBoxItem Content="Rachel Procrass"/>
+            <ComboBoxItem Content="Sierra Chiu"/>
+            <ComboBoxItem Content="Roman Nayda"/>
+            <ComboBoxItem Content="Brian Tu"/>
+        </ComboBox>
+        <Button Content="Create Patient" HorizontalAlignment="Left" Margin="624,362,0,0" VerticalAlignment="Top" Background="Transparent" Width="158" Height="43" FontWeight="Bold" FontSize="20" Click="Button_Click_1"/>
 
     </Grid>
     <Window.Resources>
